make sure the groupsList isn't pushed too much by the usersList

--- a/app/modules/inventory/side_nav/scss/_side_nav.scss
+++ b/app/modules/inventory/side_nav/scss/_side_nav.scss
@@ -131,5 +131,9 @@
       overflow: auto;
       width: 100%;
     }
+    #groupsList{
+      // avoid having #groupsList shrinked to display only one group
+      min-height: 7em;
+    }
   }
 }
